# easy-office

./: .gitignore  README.md  pyproject.toml  requirements.txt  rxconfig.py
.VSCodeCounter/2025-01-01_18-27-53/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-01-01_19-43-54/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-01-01_19-44-30/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-01-01_19-44-55/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
easy_office/: __init__.py  models.py
easy_office/archive/: display.py  models.py  recognize.py
easy_office/pages/: bank_slip.py  display.py  index.py  upload.py  upload_files.py  vat_invoice.py
easy_office/pages/components/: check_password.py  nav_bar.py  template.py  upload_zone.py
easy_office/utils/: __init__.py  file_process.py  log.py  request_api.py  test.py  发票识别脚本.py
