[project]
name = "easy-office"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1",
    "psycopg2-binary>=2.9.10",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.1",
    "reflex-ag-grid>=0.0.10",
    "reflex==0.6.7",
]
